[gd_scene load_steps=7 format=3 uid="uid://b5lwirq8hdc8r"]

[ext_resource type="Script" path="res://scripts/ui/in_game_menu.gd" id="1_fvetf"]
[ext_resource type="Texture2D" uid="uid://da3uawulivdj4" path="res://assets/sprites/devices/computer/computer_base.png" id="1_l4yl1"]

[sub_resource type="Animation" id="Animation_gt1cm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_r4l2d"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ktoqp"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e6tno"]
_data = {
"RESET": SubResource("Animation_gt1cm"),
"fade_in": SubResource("Animation_r4l2d"),
"fade_out": SubResource("Animation_ktoqp")
}

[node name="InGameMenu" type="CanvasLayer"]
script = ExtResource("1_fvetf")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = -115.5
offset_right = 79.0
offset_bottom = 115.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer2"]
layout_mode = 2
texture = ExtResource("1_l4yl1")

[node name="Label" type="Label" parent="Panel/VBoxContainer2"]
layout_mode = 2
text = "Game Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="RestartLevelButton" type="Button" parent="Panel/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="BackToMenuButton" type="Button" parent="Panel/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Back to main menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e6tno")
}

[connection signal="pressed" from="Panel/VBoxContainer2/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer2/VBoxContainer/RestartLevelButton" to="." method="_on_restart_level_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer2/VBoxContainer/BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
